#3 | @Zzzul | add approval stage module :ok_hand: :sunflower:
